syntax = "proto3";

option java_package = "com.inasweaterpoorlyknit.merlinsbag";
option java_multiple_files = true;

enum DarkMode {
  System = 0;
  Light = 1;
  Dark = 2;
}

message UserPreferences {
  bool has_completed_onboarding = 1;
  DarkMode dark_mode = 2;
}